--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,5 +1,8 @@
 <header class="header">
   <nav class="navbar">
+    <div class="navbar-item">
+        <div class="{{site.logo}}"></div>
+    </div>
     <div class="navbar-brand">
       <a class="navbar-item" href="{{{or site.url (or siteRootUrl siteRootPath)}}}">{{site.title}}</a>
       <button class="navbar-burger" data-target="topbar-nav">
