--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -972,3 +972,68 @@
   text-align: right;
   width: 1.5em;
 }
+
+/* Search field */
+
+.search-field {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.search-input {
+  width: 100%;
+  border: 1px solid var(--panel-border-color);
+  border-right: none;
+  padding: 0 0 0 15px;
+  border-radius: 20px 0 0 20px;
+  outline: none;
+  background: white;
+  font-family: var(--body-font-family);
+  font-size: var(--body-font-size);
+}
+
+.search-button {
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--panel-border-color);
+  border-left: none;
+  background: white;
+  text-align: center;
+  color: var(--panel-border-color);
+  border-radius: 0 20px 20px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/* Search results */
+
+.doc .search-div {
+  border-radius: 15px;
+  border: 1px solid transparent;
+  cursor: default;
+}
+
+.doc .search-div:hover {
+  border-radius: 15px;
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+
+.doc .search-div .search-paragraph {
+  line-height: normal;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+.doc .search-div .search-paragraph .search-link {
+  font-size: small;
+  font-weight: normal;
+}
+
+.doc .search-div .search-paragraph .search-excerpt {
+  font-size: small;
+  color: #545454;
+}
