--- a/src/partials/head-icons.hbs
+++ b/src/partials/head-icons.hbs
@@ -1,1 +1,2 @@
-    {{!-- <link rel="icon" href="{{{uiRootPath}}}/img/favicon.ico" type="image/x-icon"> --}}
+{{! Font Awesome}}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
