Added link to status page

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -19,6 +19,7 @@
           <a class="navbar-link" href="#">APPUiO</a>
           <div class="navbar-dropdown">
             <a class="navbar-item" target="_blank" href="https://www.appuio.ch/">Main website</a>
+            <a class="navbar-item" target="_blank" href="https://status.appuio.cloud/">Status</a>
             <a class="navbar-item" target="_blank"
               href="https://products.docs.vshn.ch/products/appuio/cloud/index.html">Product description</a>
           </div>
