Updated menu with new entries

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -18,10 +18,13 @@
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">APPUiO</a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" target="_blank" href="https://www.appuio.ch/">Main website</a>
+            <a class="navbar-item" target="_blank" href="https://www.appuio.ch/en/offering/cloud/">Main Website</a>
+            <a class="navbar-item" target="_blank" href="https://portal.appuio.cloud/">Portal</a>
             <a class="navbar-item" target="_blank" href="https://status.appuio.cloud/">Status</a>
             <a class="navbar-item" target="_blank"
-              href="https://products.docs.vshn.ch/products/appuio/cloud/index.html">Product description</a>
+              href="https://products.docs.vshn.ch/products/appuio/cloud/">Product Description</a>
+            <a class="navbar-item" target="_blank"
+              href="https://kb.vshn.ch/appuio-cloud/">System Engineering Documentation</a>
           </div>
         </div>
         <div class="navbar-item has-dropdown is-hoverable">
